package com.mhm.struct.bridge;

/**
 * @author MHm
 * @date 2020-4-19 12:01
 */
public interface Implementor {
    public void start();
    public void stop();
}
